:art: refactor: edit List.of() part of the code